# crowd_evacuation_simulator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/crowd_evacuation_simulator/: __init__.py  agent.py  crowd_evac_sim.py  database.py  environment.py  environment_factory.py  exit.py  main.py  obstacle.py  simulation.py  visualization.py
tests/: conftest.py  test_agent.py  test_database.py  test_environment.py  test_environment_factory.py  test_exit.py  test_integration.py  test_obstacle.py  test_simulation.py
tests/unit/: test_agent.py  test_exit.py  test_simulation.py
