[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowd_evacuation_simulator"
version = "0.1.0"
description = "Agent-based crowd evacuation simulator"
authors = [{name="Kilian Fogarty"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9"
]

[project.optional-dependencies]
dev = ["pytest>=9.0",
       "pytest-cov>=5.0",
       "mypy>=1.10",
       "ruff>=0.4",
       "pre-commit"
]

[project.scripts]
simulate = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/crowd_evacuation_simulator"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
