[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowd_evacuation_simulator"
version = "0.1.0"
description = "Agent-based crowd evacuation simulator"
authors = [{name="Kilian Fogarty"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0",
       "pytest-cov>=5.0",
       "mypy>=1.10",
       "ruff>=0.4",
       "black>=24.0",
       "pre-commit",

]

[project.scripts]
simulate = "crowd_evacuation_simulator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/crowd_evacuation_simulator --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = false
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["numpy.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/crowd_evacuation_simulator"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
